objects/vlocity_ins__Project__c.object
<CustomObject>
    <description>RESERVED. For future use under Insurance and Health.</description>
    <fields>
        <fullName>vlocity_ins__Creator__c</fullName>
        <label>Creator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Description__c</fullName>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__GlobalKey__c</fullName>
        <externalId>true</externalId>
        <label>Global Key</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsDefault__c</fullName>
        <formula>$Setup.vlocity_ins__WorkSetSettings__c.vlocity_ins__DefaultProjectGlobalKey__c  =  vlocity_ins__GlobalKey__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__LastModifier__c</fullName>
        <label>Last Modifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__OriginalCreatedDate__c</fullName>
        <description>The date the record was originally created.</description>
        <label>Original Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__OriginalLastModifiedDate__c</fullName>
        <description>The date the record was originally last modified.</description>
        <label>Original Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProjectOwner__c</fullName>
        <description>The name of the person who owns the project.</description>
        <label>Project Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Testing</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Deployed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Project</label>
    <listViews>
        <fullName>vlocity_ins__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <recordTypes>
        <fullName>vlocity_ins__Module</fullName>
        <active>true</active>
        <label>Module</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_ins__WorkSet</fullName>
        <active>true</active>
        <label>Work Set</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>